junit: tests for module-info in test root
GitOrigin-RevId: 8ccc5c2c63875530c254c80052d1511fc4518199